resources/assets/less/bem/osu-page.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.osu-page {
  align-self: center;
  margin-left: auto;
  margin-right: auto;
  flex: none;

  .default {
    background-color: @osu-colour-b5;
    color: #fff;
    .default-box-shadow();
    margin-bottom: 10px;
  }

  .page-width();
  @media @desktop {
    .page-width-desktop();
  }

  &--account-edit-header {
    .default-box-shadow();
  }

  &--has-anchor {
    .fragment-target-fn();
  }

  &--beatmapsets-search-header {
    .default-box-shadow();
    margin-bottom: 10px;
  }

  &--changelog {
    .default;
    background-color: @osu-colour-b4;
    display: flex;
    flex-direction: column;
    margin-bottom: 0;
  }

  &--comment {
    .default;
    padding: 10px 0 0;
    margin-bottom: 0;
  }

  &--comments {
    .default;
    padding: 10px 0;
  }

  &--contest {
    @media @desktop {
      .page-width-desktop(20px);
      margin-bottom: 10px;
    }
  }

  &--contests {
    .default;
  }

  &--download {
    .page-width(20px);
    .default;

    display: flex;
    flex-direction: column;

    @media @desktop {
      .page-width-desktop(20px);
    }
  }

  &--forum {
    background-color: @osu-colour-b5;
    color: @osu-colour-c1;
    margin-bottom: 10px;
  }

  &--forum-topic {
    background-color: @osu-colour-b4;
    color: @osu-colour-c1;
  }

  &--forum-topic-feature-vote {
    .default-box-shadow();
    background-color: #fff;
    padding: 20px;
    margin-bottom: 5px;
  }

  &--forum-topic-reply {
    background-color: @osu-colour-b2;
    color: @osu-colour-c1;
    padding: 10px 15px;
    display: flex;
    flex-direction: column;

    &.js-forum-topic-reply-flash {
      animation: forum-topic-reply-flash 500ms ease-in-out;

      @keyframes forum-topic-reply-flash {
        50% { background-color: @osu-colour-b1; }
      }
    }

    &[data-state=stick] {
      position: fixed;
      z-index: @z-index--forum-topic-reply-stick;
      bottom: 0; // weird flashing in firefox android on certain scroll if using top
      height: calc(var(--vh, 1vh) * 100);

      @media @desktop {
        position: relative;
        top: auto;
        z-index: auto;
        height: auto;
      }
    }
  }

  &--full {
    flex: 1 0 auto;
  }

  &--generic {
    .default;
    padding: 20px;
  }

  &--generic-compact {
    .default;
  }

  &--header {
    .default;
    margin-bottom: 0;
  }

  &--header-news, &--groups {
    .default-box-shadow();
    background-color: #333;
  }

  &--news {
    .default;
    .default-gutter();
    padding-bottom: 20px;
    padding-top: 20px;
  }

  &--notification-banners {
    @media @desktop {
      height: 0;
      top: (@nav2-height + 10px);
    }
  }

  &--password-reset {
    .default;
    .inner-shadow-top();

    @media @desktop {
      .page-width-desktop(20px);
    }
  }

  &--rankings {
    .default;
    padding: 15px 20px 0;
  }

  &--small {
    @media @desktop {
      .page-width-desktop(20px);
    }
  }

  &--supporter {
    .default;
    display: flex;
    flex-direction: column;
  }

  &--tournament {
    @media @desktop {
      .page-width-desktop(20px);
      margin-bottom: 10px;
    }
  }

  &--users {
    .default;
    background-color: @osu-colour-b4;
  }

  &--users-show-header {
    .default-box-shadow();
  }

  &--wiki {
    .default;
    font-size: @font-size--wiki;
    padding: 20px;

    @media @desktop {
      padding-left: @padding-wiki-desktop;
      padding-right: @padding-wiki-desktop;
    }
  }

  &--chat {
    .default;

    flex: 1 0 auto;
    display: flex;
    height: calc((var(--vh, 1vh) * 100) - 150px); // viewport height - compact header+footer
    width: 100vw;
    margin-bottom: 0;

    @media @mobile {
      height: calc((var(--vh, 1vh) * 100) - 110px);
    }
  }
}

